--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,7 +7,7 @@
 // Fontawesome
 @import '~font-awesome/scss/font-awesome';
 // Chosen
-@import '~chosen-js/chosen';
+@import '~bootstrap-chosen/bootstrap-chosen.css';
 
 .chosen-container {
   width: 100% !important;
