[implemented] product type periodicity [implemented] client payment history [implemented] admin payment history

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -119,3 +119,7 @@
 .StripeElement--webkit-autofill {
   background-color: #fefde5 !important;
 }
+
+tr + .no-upsell-alternative{
+  display: none;
+}
