--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,7 @@
 @import '~font-awesome/scss/font-awesome';
 // Chosen
 @import '~bootstrap-chosen/bootstrap-chosen.css';
+@import '~datatables.net-bs4/css/dataTables.bootstrap4.css';
 
 .chosen-container {
   width: 100% !important;
